--- a/chooseAdventure.html
+++ b/chooseAdventure.html
@@ -26,7 +26,7 @@
             </div>
             <div>
                 <div class="upstairs text-colour hidden">
-                    <p>Wohooo!!! You solved the mystery! You reached the Halooween Candy store!</p>
+                    <p>Wohooo!!! You solved hhh the mystery! You reached the Halooween Candy store!</p>
                     <img src="happy-halloween-win.jpg" alt="Candy Store" height="300">
                 </div>
             </div>
